Fix an issue where link hover was hard to read over green background block

--- a/assetsSource/css/blocks/_ContentBlock/ContentBlock.0000.pcss
+++ b/assetsSource/css/blocks/_ContentBlock/ContentBlock.0000.pcss
@@ -5,3 +5,7 @@
 .ContentBlock--HasBgColor-Green {
     background-color: var(--green);
 }
+
+.ContentBlock--HasBgColor-Green a:hover {
+    color: var(--lighterGreen);
+}
